test: add tests for users API

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,8 +72,9 @@ envlist=
 deps = 
     coverage
     pytest
-    pytest-cov
     pytest-mock
+    pytest-httpx
+    pydantic_factories
     -r {tox_root}/requirements.txt
 commands =
     coverage run -p -m pytest tests
