feat: add realtime API

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ disable=
     broad-except,
     import-error,
     invalid-name,
+    line-too-long,
     missing-module-docstring,
     missing-class-docstring,
     missing-function-docstring,
