feat: add emoticons API

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ disable=
     missing-class-docstring,
     missing-function-docstring,
     too-few-public-methods,
+    too-many-public-methods,
     too-many-arguments,
 
 [flake8]
