--- a/setup.cfg
+++ b/setup.cfg
@@ -9,8 +9,7 @@ long_description_content_type = text/markdown
 keywords = plurk, oauth
 url = https://github.com/shc261392/plurk.py
 classifiers =
-    Development Status :: 3 - Alpha,
-    Intended Audience :: Developers,
+    Development Status :: 4 - Beta,
     License :: OSI Approved :: MIT License
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
