feat: add AsyncClient for async support

--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ disable=
     too-few-public-methods,
     too-many-public-methods,
     too-many-arguments,
+    duplicate-code,
 
 [flake8]
 max-line-length = 120
@@ -72,6 +73,7 @@ envlist=
 deps = 
     coverage
     pytest
+    pytest-asyncio
     pytest-mock
     pytest-httpx
     pydantic_factories
