Fix testing and linting CI
Signed-off-by: James Chien <shc261392@gmail.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ author_email = shc261392@gmail.com
 description = An unofficial Plurk API 2.0 SDK for Python 3.8+.
 long_description = file: README.md
 long_description_content_type = text/markdown
-keywords = plurk, oauth
+keywords = plurk, oauth, SDK
 url = https://github.com/shc261392/plurk.py
 classifiers =
     Development Status :: 4 - Beta
@@ -25,6 +25,7 @@ install_requires =
     authlib
     httpx
     pydantic
+    wheel
 
 [options.packages.find]
 where = src
@@ -36,6 +37,7 @@ tests =
 
 docs =
     sphinx
+    sphinx-rtd-theme  # Added a theme for better documentation rendering
 
 [coverage:run]
 branch = True
@@ -58,6 +60,7 @@ disable=
     too-few-public-methods,
     too-many-public-methods,
     too-many-arguments,
+    too-many-positional-arguments,
     duplicate-code,
 
 [flake8]
@@ -67,7 +70,7 @@ exclude = .git,__pycache__,__init__.py,.mypy_cache,.pytest_cache,venv,.venv
 
 [tox:tox]
 envlist=
-    py37, py38, py39,py310, flake8, pylint, bandit
+    py38, py39, py310, flake8, pylint, bandit
 
 [testenv]
 deps = 
@@ -83,6 +86,8 @@ commands =
 
 [testenv:test]
 description = run the test suite with pytest
+commands =
+    coverage run -p -m pytest tests
 
 [testenv:report]
 deps = coverage
