--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
-anyio==3.6.2
-git+https://github.com/shc261392/authlib@httpx-fixes#egg=Authlib
-certifi==2024.7.4
-cffi==1.15.1
-cryptography==44.0.1
-h11==0.14.0
-httpcore==0.16.2
-httpx==0.23.1
-idna==3.7
-pycparser==2.21
-pydantic==1.10.13
-rfc3986==1.5.0
-sniffio==1.3.0
-typing_extensions==4.4.0
+annotated-types==0.7.0
+anyio==4.9.0
+Authlib @ git+https://github.com/shc261392/authlib@fe1bd2fece34bad479e2d7c0756c378641340c06
+certifi==2025.6.15
+cffi==1.17.1
+cryptography==45.0.4
+exceptiongroup==1.3.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+pycparser==2.22
+pydantic==1.10.22
+pydantic_core==2.33.2
+python-dotenv==1.1.0
+sniffio==1.3.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
