--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -26,6 +26,8 @@ jobs:
           python -m pip install .[test]
       - name: Test with pytest
         run: |
-          pytest
+          pytest --cov --cov-branch --cov-report=xml
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
