--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ test = [
     "coverage",
     "pytest",
     "pytest-asyncio",
+    "pytest-cov",
     "pytest-mock",
     "pytest-httpx",
     "pydantic-factories",
